crates/crochet_parser/src/snapshots/crochet_parser__tests__jsx.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"<Foo>Hello</Foo>\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..16,
                expr: JSXElement(
                    JSXElement {
                        span: 0..16,
                        name: "Foo",
                        attrs: [],
                        children: [
                            JSXText(
                                JSXText {
                                    span: 5..10,
                                    value: "Hello",
                                },
                            ),
                        ],
                    },
                ),
            },
        ],
    },
)
