crates/crochet_parser/src/snapshots/crochet_parser__tests__leading_comments.snap
---
source: crates/crochet_parser/src/lib.rs
expression: parse(leading_comments)
---
Program {
    body: [
        VarDecl {
            span: 9..86,
            pattern: Ident(
                BindingIdent {
                    span: 71..72,
                    id: Ident {
                        span: 71..72,
                        name: "x",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lit(
                    Num(
                        Num {
                            span: 75..77,
                            value: "10",
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
