crates/crochet_parser/src/snapshots/crochet_parser__tests__literals-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"1.23\")"
---
Program {
    body: [
        Expr {
            span: 0..4,
            expr: Lit(
                Num(
                    Num {
                        span: 0..4,
                        value: "1.23",
                    },
                ),
            ),
        },
    ],
}
