crates/crochet_parser/src/snapshots/crochet_parser__tests__literals-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"\\\"hello\\\"\")"
---
Program {
    body: [
        Expr {
            span: 0..7,
            expr: Lit(
                Str(
                    Str {
                        span: 0..7,
                        value: "hello",
                    },
                ),
            ),
        },
    ],
}
