crates/crochet_parser/src/snapshots/crochet_parser__tests__member_access-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"foo().bar();\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..12,
                expr: Expr {
                    span: 0..11,
                    kind: App(
                        App {
                            lam: Expr {
                                span: 0..9,
                                kind: Member(
                                    Member {
                                        obj: Expr {
                                            span: 0..5,
                                            kind: App(
                                                App {
                                                    lam: Expr {
                                                        span: 0..3,
                                                        kind: Ident(
                                                            Ident {
                                                                span: 0..3,
                                                                name: "foo",
                                                            },
                                                        ),
                                                    },
                                                    args: [],
                                                },
                                            ),
                                        },
                                        prop: Ident(
                                            Ident {
                                                span: 6..9,
                                                name: "bar",
                                            },
                                        ),
                                    },
                                ),
                            },
                            args: [],
                        },
                    ),
                },
            },
        ],
    },
)
