crates/crochet_parser/src/snapshots/crochet_parser__tests__member_access-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"arr[x](y)\")"
---
Program {
    body: [
        Expr {
            span: 0..9,
            expr: App(
                App {
                    span: 0..9,
                    lam: Member(
                        Member {
                            span: 0..6,
                            obj: Ident(
                                Ident {
                                    span: 0..3,
                                    name: "arr",
                                },
                            ),
                            prop: Computed(
                                ComputedPropName {
                                    span: 3..6,
                                    expr: Ident(
                                        Ident {
                                            span: 4..5,
                                            name: "x",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    args: [
                        ExprOrSpread {
                            spread: None,
                            expr: Ident(
                                Ident {
                                    span: 7..8,
                                    name: "y",
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}
